<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_screen_padding"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAppDedicated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/msg_app_dedicated"
            android:textSize="@dimen/text_size_h2"
            android:textColor="?colorTextMain"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            app:tint="@color/colorReiRed"
            app:layout_constraintTop_toBottomOf="@id/tvAppDedicated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_rei_name"
            android:id="@+id/ivReiName"
            android:contentDescription="@string/title_rei"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAboutTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_root_god"
            android:textSize="@dimen/text_size_h2"
            android:textColor="?colorTextMain"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivReiName"
            android:layout_marginTop="35dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAboutRoot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutTitle"
            android:layout_marginTop="10dp"
            android:text="@string/msg_about_root"
            android:gravity="center"
            android:textColor="?colorTextMain"
            android:textColorLink="?colorTextDark"
            android:textSize="@dimen/text_size_h3"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAboutApp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutRoot"
            android:layout_marginTop="30dp"
            android:text="@string/msg_about_rutodesu"
            android:gravity="center"
            android:textColor="?colorTextMain"
            android:textColorLink="?colorTextDark"
            android:textSize="@dimen/text_size_h3"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_contact"
            android:textSize="@dimen/text_size_h2"
            android:textColor="?colorTextMain"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutApp"
            android:layout_marginTop="50dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_share"
            android:textSize="@dimen/text_size_h2"
            android:textColor="?colorTextMain"
            android:gravity="end"
            app:layout_constraintEnd_toStartOf="@id/tvRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContact"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_rate"
            android:textSize="@dimen/text_size_h2"
            android:textColor="?colorTextMain"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvShare"
            app:layout_constraintTop_toBottomOf="@id/tvContact"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>