<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_screen_padding">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_personalization"
        android:textColor="?colorTextMain"
        android:textSize="@dimen/text_size_h3"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?colorTextMain"
        android:layout_marginTop="4dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_theme"
        android:layout_marginTop="10dp"
        android:textColor="?colorTextMain"
        android:textSize="@dimen/text_size_h3"
        />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingVertical="5dp"
            >

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/viewThemeLight"
                android:background="@drawable/bg_circle_theme_system"
                android:id="@+id/viewThemeSystem"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_system"
                android:id="@+id/tvThemeSystem"
                app:layout_constraintTop_toBottomOf="@id/viewThemeSystem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/viewThemeLight"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="2dp"
                />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/bg_circle_theme"
                tools:backgroundTint="@color/colorLight"
                android:id="@+id/viewThemeLight"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_light"
                android:id="@+id/tvThemeLight"
                app:layout_constraintTop_toBottomOf="@id/viewThemeLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="2dp"
                />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewThemeLight"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/bg_circle_theme"
                android:id="@+id/viewThemeDark"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_dark"
                android:id="@+id/tvThemeDark"
                app:layout_constraintTop_toBottomOf="@id/viewThemeDark"
                app:layout_constraintStart_toEndOf="@id/tvThemeLight"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="2dp"
                />


            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/tvThemeSystem"
                app:layout_constraintStart_toStartOf="@id/tvThemeSystem"
                app:layout_constraintEnd_toEndOf="@id/tvThemeLight"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_circle_theme"
                tools:backgroundTint="@color/colorLightVar"
                android:id="@+id/viewThemePurple"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_zebrine"
                android:id="@+id/tvThemePurple"
                app:layout_constraintTop_toBottomOf="@id/viewThemePurple"
                app:layout_constraintStart_toStartOf="@id/tvThemeSystem"
                app:layout_constraintEnd_toEndOf="@id/tvThemeLight"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="2dp"
                />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/tvThemeSystem"
                app:layout_constraintStart_toStartOf="@id/tvThemeLight"
                app:layout_constraintEnd_toEndOf="@id/tvThemeDark"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_circle_theme"
                tools:backgroundTint="@color/colorRei"
                android:id="@+id/viewThemeRei"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_rei"
                android:id="@+id/tvThemeRei"
                app:layout_constraintTop_toBottomOf="@id/viewThemeRei"
                app:layout_constraintStart_toStartOf="@id/tvThemeLight"
                app:layout_constraintEnd_toEndOf="@id/tvThemeDark"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="2dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_marginTop="15dp"
            style="@style/Theme.Rutodesu.ClickableWithinBorder"
            android:id="@+id/clLanguage"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguageTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/title_change_language"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguageDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/desc_current_language_colon"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h4"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvLanguageTitle"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>